# nbiobsp-native-web-extension

./: .gitignore  CMakeLists.txt  LICENSE.txt  LICENSE_ptBR.txt  README.md  package-lock.json  package.json
extension/: README.md  index.html  manifest.json  package-lock.json  package.json  popup.html  vite.config.ts
extension/app/: package.json  tsconfig.json  vite.config.ts
extension/app/public/: manifest.firefox.json  manifest.json
extension/app/public/_locales/en/: messages.json
extension/app/public/_locales/pt_BR/: messages.json
extension/app/scripts/: convert-to-iife.mjs  prepare-firefox.mjs
extension/app/src/: utils.ts
extension/app/src/background/: background.ts  native-client.ts  polyfill-loader.ts
extension/app/src/content/: content.ts
extension/app/src/popup/: popup.css  popup.html  popup.tsx
extension/public/: manifest.json
extension/sample-page/: index.html  package.json  vite.config.ts
extension/sample-page/src/: i18n.js  index.tsx  prism-custom.css
extension/scripts/: background.js  popup.js
extension/shared/: package.json
extension/shared/src/: index.js  style.css
extension/shared/src/components/Button/: Button.css
extension/src/: i18n.js  index.tsx  style.css
extension/src/background/: background.ts
extension/src/components/Button/: Button.css  Button.jsx
extension/src/components/Fader/: Fader.css  Fader.jsx
extension/src/content/: content.ts
extension/src/popup/: popup.html  popup.ts  popup.tsx
native-app/: app.cpp  main.cpp  make_installer.nsi  nativehost-chrome.json  nativehost-firefox.json
native-app/cmake/: NSIS.template.in
native-app/resources/: NSIS.template.in  checkStdIO.ps1  win-res.rc.in
